# algorithms_structures

./: algorithms_structures.txt
Lab1CPP/: CMakeLists.txt  algorithms_and_data_lab1.cpp  lab1cpp.bat
Lab1CPP/LibraryCPP/: array.cpp
LibraryCPPClassPlus/: array.cpp
LibraryCPPClassPlus/ProjectLab1CPPMy/: CMakeLists.txt  algorithms_and_data_lab1.cpp  lab1cpp.bat
LibraryCPPClassPlus/Test/: CMakeLists.txt  lab1cpptest.bat
